--- a/Noodle/style.css
+++ b/Noodle/style.css
@@ -21,9 +21,9 @@ nav {
     align-items: center;
     background: #fff;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-  }
+}
 
-/* General button styles */
+
 button {
     background-color: #007bff;
     color: #fff;
@@ -45,12 +45,6 @@ button:active {
     transform: scale(0.98);
 }
 
-/* Target iOS devices specifically */
-@supports (-webkit-appearance: none) {
-    button {
-        -webkit-appearance: none; /* Remove default iOS button styling */
-    }
-}
 nav .logo {
   display: flex;
   align-items: center;
@@ -125,25 +119,29 @@ nav.open .sidebar {
 }
 
 .overlay {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 1000vh;
+    width: 200%;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s ease;
+    background: rgba(0, 0, 0, 0.3);
+  }
+  nav.open ~ .overlay {
+    opacity: 1;
+    left: 260px;
+    pointer-events: auto;
+  }
+  .greeting {
+    margin-left: 20px;
+  }
   
-  position: fixed;
-  top: 0;
-  left: -100%;
-  height: 1000vh;
-  width: 200%;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.4s ease;
-  background: rgba(0, 0, 0, 0.3);
-}
-nav.open ~ .overlay {
-  opacity: 1;
-  left: 260px;
-  pointer-events: auto;
-}
-.greeting {
-  margin-left: 20px;
-}
+  .username {
+    color: rebeccapurple;
+    text-decoration: underline;
+  }
 
 .username {
   color: rebeccapurple;
